# cream

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build-win.ninja  build.bat  build.sh  cream.h
deprecated/: anon_arg_list.c  anon_arg_list.h
include/: cargs  cargs.h  cream.h
include/inernal/: extended_args.h  utils.h
include/internal/: anon_arg_list.h  bit_vec_ops.h  error_system.h  exp_stack.h  init_funcs.h  main_funcs.h  shared_data.h  utils.h
src/: CMakeLists.txt  anon_arg_list.c  bit_vec_ops.c  cargs.c  cream.h  cream_craft.h  cream_error.h  error_str.c  error_system.c  exp_stack.c  init_funcs.c  init_funcs.h  main_funcs.c  shared_data.c  utils.c
src/data_structures/: bit_vec.c  exp_stack.c  exp_stack.h  trie.c  trie.h
src/fn_utils/: arg_options.c  arg_options.h  general_utils.c  general_utils.h  utils.c  utils.h
src/internal/: utils.c
src/shared_data/: error_system.c  shared_data.c  shared_data.h
test/: CMakeLists.txt  test.bat  test.sh
test/init_funcs/: arg_data_max_min.c  err_sys_str_gen.c
test/init_funcs_src/: arg_id_set_clean.c  init_funcs_test.h
test/main_funcs/: anonymous_args_caching.c
test/src/: 01_utils.c  02_utils.c  03_utils.c  04_utils.c  06_utils.c  10_utils.c  11_utils.c  12_utils.c  1_anon_arg_list.c  1_init_funcs.c  1_main_funcs.c  1_utils.c  2_anon_arg_list.c  2_init_funcs.c  2_main_funcs.c  2_utils.c  3_anon_arg_list.c  3_init_funcs.c  3_utils.c  4_anon_arg_list.c  4_init_funcs.c  4_utils.c  5_init_funcs.c  5_utils.c  6_init_funcs.c  6_utils.c  7_utils.c  8_utils.c  9_init_funcs.c  9_utils.c  init_funcs_test.h  utils_01.c  utils_02.c  utils_test.h
test/utils/: check_mandatory_args.c
test/utils_src/: equals_operator_args.c  ext_arg_push.c  read_point.c
